--- a/src/cookie.html
+++ b/src/cookie.html
@@ -109,31 +109,31 @@
             class="logo_lang"
             id="sort"
             src="img/logo/bb_logo_lang.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="sol"
             src="img/logo/bb_logo_lang_sol.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="graes"
             src="img/logo/bb_logo_lang.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="himmel"
             src="img/logo/bb_logo_lang_himmel.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="rust"
             src="img/logo/bb_logo_lang_rust.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
         </a>
       </div>
@@ -145,31 +145,31 @@
             class="logo_kort"
             id="sort"
             src="img/logo/bb_logo_kort.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="sol"
             src="img/logo/bb_logo_kort_sol.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="graes"
             src="img/logo/bb_logo_kort_graes.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="himmel"
             src="img/logo/bb_logo_kort_himmel.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="rust"
             src="img/logo/bb_logo_kort_rust.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
         </a>
 
@@ -240,17 +240,17 @@
 
         <ol class="secondary_nav">
           <li>
-            <img class="person h-8 w-8" src="img/ikoner/person.svg" alt="" />
+            <img class="person h-8 w-8" src="img/ikoner/person.svg" alt="profil ikon" />
           </li>
           <li>
             <img
               class="shopping h-8 w-8"
               src="img/ikoner/shopping_bag.svg"
-              alt=""
+              alt="shopping ikon"
             />
           </li>
           <li>
-            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="" />
+            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="søge ikon" />
           </li>
         </ol>
       </nav>
