--- a/src/logind.html
+++ b/src/logind.html
@@ -80,6 +80,7 @@
       }
     </style>
   </head>
+
   <body>
     <!-- header -->
     <header>
@@ -96,31 +97,31 @@
             class="logo_lang"
             id="sort"
             src="img/logo/bb_logo_lang.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="sol"
             src="img/logo/bb_logo_lang_sol.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="graes"
             src="img/logo/bb_logo_lang.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="himmel"
             src="img/logo/bb_logo_lang_himmel.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_lang"
             id="rust"
             src="img/logo/bb_logo_lang_rust.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
         </a>
       </div>
@@ -132,31 +133,31 @@
             class="logo_kort"
             id="sort"
             src="img/logo/bb_logo_kort.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="sol"
             src="img/logo/bb_logo_kort_sol.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="graes"
             src="img/logo/bb_logo_kort_graes.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="himmel"
             src="img/logo/bb_logo_kort_himmel.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
           <img
             class="logo_kort"
             id="rust"
             src="img/logo/bb_logo_kort_rust.png"
-            alt=""
+            alt="Blomster Bjarne logo"
           />
         </a>
 
@@ -227,17 +228,25 @@
 
         <ol class="secondary_nav">
           <li>
-            <img class="person h-8 w-8" src="img/ikoner/person.svg" alt="" />
+            <img
+              class="person h-8 w-8"
+              src="img/ikoner/person.svg"
+              alt="profil ikon"
+            />
           </li>
           <li>
             <img
               class="shopping h-8 w-8"
               src="img/ikoner/shopping_bag.svg"
-              alt=""
+              alt="shopping ikon"
             />
           </li>
           <li>
-            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="" />
+            <img
+              class="search h-8 w-8"
+              src="img/ikoner/search.svg"
+              alt="søge ikon"
+            />
           </li>
         </ol>
       </nav>
@@ -252,7 +261,7 @@
             <img
               class="pr-s-spacing-mobile"
               src="/img/ikoner/radio.svg"
-              alt=""
+              alt="radio button log ind"
             />
             <p>Log ind</p>
           </div>
@@ -262,7 +271,7 @@
             <img
               class="pr-s-spacing-mobile"
               src="/img/ikoner/radio_un.svg"
-              alt=""
+              alt="radio button opret bruger"
             />
             <p>Opret konto</p>
           </div>
