--- a/src/information.html
+++ b/src/information.html
@@ -160,6 +160,175 @@
     </style>
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <div
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
+      >
+        <p>Køb dine blomster i vores butikker</p>
+        <p>Bestil dit abonnement på vores webshop</p>
+      </div>
+      <!-- LOGO DESKTOP -->
+      <section>
+        <a class="navigation_desktop" href="index.html">
+          <img
+            class="logo_lang"
+            id="sort"
+            src="img/logo/bb_logo_lang.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="sol"
+            src="img/logo/bb_logo_lang_sol.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="graes"
+            src="img/logo/bb_logo_lang.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="himmel"
+            src="img/logo/bb_logo_lang_himmel.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="rust"
+            src="img/logo/bb_logo_lang_rust.png"
+            alt="Blomster Bjarne logo"
+          />
+        </a>
+      </section>
+
+      <!-- NAVIGATION MOBIL -->
+      <section class="navigation_mobil">
+        <a class="logo_mobil" href="">
+          <img
+            class="logo_kort"
+            id="sort"
+            src="img/logo/bb_logo_kort.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="sol"
+            src="img/logo/bb_logo_kort_sol.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="graes"
+            src="img/logo/bb_logo_kort_graes.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="himmel"
+            src="img/logo/bb_logo_kort_himmel.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="rust"
+            src="img/logo/bb_logo_kort_rust.png"
+            alt="Blomster Bjarne logo"
+          />
+        </a>
+
+        <div class="burger">
+          <button class="toggle-btn">☰</button>
+        </div>
+      </section>
+
+      <nav class="lg:flex">
+        <ul>
+          <li>
+            <a
+              href="abonnement.html"
+              class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Abonnement</a
+            >
+          </li>
+          <div class="dropdown">
+            <label tabindex="0">
+              <button class="flex">
+                <p
+                  class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+                >
+                  Sortiment
+                </p>
+                <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
+                  <path
+                    fill="#000000"
+                    d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"
+                  />
+                </svg>
+              </button>
+            </label>
+            <ul class="underkat m-0">
+              <li>
+                <a
+                  tabindex="0"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  href="blomster.html"
+                  >Blomster</a
+                >
+              </li>
+              <li>
+                <a
+                  tabindex="0"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  href="vaser.html"
+                  >Vaser</a
+                >
+              </li>
+            </ul>
+          </div>
+          <li>
+            <a
+              href="#"
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Begivenheder</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Kontakt os</a
+            >
+          </li>
+        </ul>
+
+        <ul class="secondary_nav">
+          <li>
+            <a href="logind.html">
+              <img
+                class="person h-8 w-8"
+                src="img/ikoner/person.svg"
+                alt="Gå til din konto"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="kurv.html">
+              <img
+                class="shopping h-8 w-8"
+                src="img/ikoner/shopping_bag.svg"
+                alt="Gå til kurv"
+              />
+            </a>
+          </li>
+          <li>
+            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="Søg" />
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main
       class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
     >
@@ -484,5 +653,6 @@
         </section>
       </article>
     </footer>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
